contrib/kubernetes/basic_kubernetes_example_with_helm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devtools
  labels:
    app: devtools
    component: frontend
spec:
  type: ClusterIP
  selector:
    app: devtools
    component: frontend
  ports:
    - name: frontend
      port: 80
      protocol: TCP
      targetPort: app
---
apiVersion: v1
kind: Service
metadata:
  name: devtools-backend
  labels:
    app: devtools
    component: backend
spec:
  type: ClusterIP
  selector:
    app: devtools
    component: backend
  ports:
    - name: backend
      port: 7007
      protocol: TCP
      targetPort: backend
