contrib/kubernetes/basic_kubernetes_example_with_helm/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devtools
  labels:
    app: devtools
    component: ingress
spec:
  rules:
    - host: <HOSTNAME>
      http:
        paths:
          - backend:
              serviceName: devtools
              servicePort: frontend
            path: /
          - backend:
              serviceName: devtools-backend
              servicePort: backend
            path: /backend
